# vscode-build-setting

./: README.md
Mac/: launch.json  tasks.json
Windows/: CMakeLists.txt  tasks.json
